# schemaspy

./: .gitignore  README.md  pyproject.toml
schemaspy/: __init__.py  ai_doc.py  analyzer.py  cli.py  differ.py  exporter.py  models.py  profiler.py  semantic.py
tests/: test_analyzer.py  test_exporter.py  test_semantic.py
